withALB/cotoapp2/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: eks-alb-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
      #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
spec:
  ingressClassName: alb-ingress-class
  rules:
    - http:
        paths:
          - path: /recommendations-api-qa/docs
            pathType: Prefix
            backend:
              service:
                name: deploy2-nodeport-service
                port:
                  number: 80
          - path: /recommendations-api-qa/
            pathType: Prefix
            backend:
              service:
                name: deploy1-nodeport-service
                port:
                  number: 80
